<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="country_name">Country name</string>
    <string name="more_info">More Info</string>
    <string name="view_statistics">View statistics</string>
    <string name="confirmed_0">Confirmed: 0</string>
    <string name="deaths_0">Deaths: 0</string>
    <string name="recovered_0">Recovered: 0</string>
    <string name="active_0">Active: 0</string>
</resources>